# fptest

./: .README.md.swo  .gitignore  LICENSE  Main.hs  QTrial.hs  README.md  TODO  changelog  fptest.cabal  out.hs
src/: FPMain.hs  FPParse.hs  FPRun.hs  FPTypes.hs  QTrial.hs
test/: DocTest.hs  FPTestTest.hs  HLint.hs  Haddock.hs
test_suite/: README
