-- The name of the package.
name:                fptest

-- The package version.  See the Haskell package versioning policy (PVP) 
-- for standards guiding when and how versions should be incremented.
-- http://www.haskell.org/haskellwiki/Package_versioning_policy
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.1.0.0

-- A short (one-line) description of the package.
synopsis:            IEEE754r conformance tests

-- A longer description of the package.
description:         This package contains a series of floating point conformance tests for Haskell.

-- URL for the project homepage or repository.
homepage:            https://github.com/jrp2014/ieee754

-- The license under which the package is released.
license:             BSD3

-- The file containing the license text.
license-file:        LICENSE

-- The package author(s).
author:              John Pavel

-- An email address to which users can send suggestions, bug reports, and 
-- patches.
maintainer:          jrp@dial.pipex.com

-- A copyright notice.
-- copyright:           

category:            Math

build-type:          Simple

-- Extra files to be distributed with the package, such as examples or a 
-- README.
extra-source-files:  README.md

-- Constraint on the version of Cabal needed to build this package.
cabal-version:       >=1.10


executable fptest
  -- .hs or .lhs file containing the Main module.
  main-is:             Main.hs
  
  -- Modules included in this executable, other than Main.
  -- other-modules:       
  
  -- LANGUAGE extensions used by modules in this package.
  other-extensions:    NoMonomorphismRestriction
  
  -- Other library packages from which modules are imported.
  build-depends:       base >=4.7 && <4.8, parsec >=3.1 && <3.2, test-framework >=0.8 && <0.9, test-framework-hunit >=0.3 && <0.4, HUnit >=1.2 && <1.3, parsec3-numbers >=0.0 && <0.1, QuickCheck >=2.7 && <2.8, test-framework-quickcheck2 >=0.3 && <0.4
  
  -- Directories containing source files.
  hs-source-dirs:      src
  
  -- Base language which the package is written in.
  default-language:    Haskell2010
  
